# gather

./: .gitignore  MANIFEST.in  README.md  combine_datasets.py  mypy.ini  requirements-dev.txt  requirements.txt  run_pipeline_aqmesh.py  run_pipeline_beaco2n.py  setup.cfg  setup.py
.github/workflows/: main.yaml
aqmesh/: __init__.py  metadata.py  scraper.py
aqmesh/aqmesh/: __init__.py  metadata.py  scraper.py
beaco2n/: extract_site_data.py  get_data.py  process_beaco2n.py  retrieve_export.py  run_pipeline.py
beaco2n/beaco2n/: __init__.py  export.py  metadata.py  process.py  scraper.py
beaco2n/tests/: test_scraper.py
docker/: Dockerfile  build.py  func.yaml  requirements.txt  route.py
functions/: build.py  func.yaml
functions/aqmesh/: func.yaml  route.py
functions/base_image/: Dockerfile  README  build.py  build_base.py  requirements.txt
functions/beaco2n/: func.yaml  route.py
functions/crds/: func.yaml  route.py
functions/picarro/: func.yaml  route.py
functions/scrape/: Dockerfile  app.yaml  build.py  func.yaml  route.py
functions/tests/: conftest.py  test_async_calls.py
gather/: __init__.py
gather/aqmesh/: __init__.py  _metadata.py  _process.py  _scraper.py
gather/beaco2n/: __init__.py  _metadata.py  _process.py  _scraper.py
gather/crds/: __init__.py  _process.py
gather/handlers/: __init__.py  _aqmesh.py  _base.py  _beaco2n.py  _binary_data.py  _crds.py  _picarro.py  _scrape.py
gather/metadata/: beaco2n_sites.json
gather/utils/: _checks.py  (+5 more)
tests/: conftest.py
utils/: __init__.py  checks.py  download.py
webscrape/: __init__.py
(+76 files in other folders)
