[metadata]
name = openghg
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
author = Gareth Jones
url = https://github.com/openghg/gather
classifiers =
	License :: OSI Approved :: Apache Software License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Natural Language :: English
	Operating System :: OS Independent
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only

[flake8]
ignore = E203, W503, E501, W291, E127, E128
per-file-ignores = __init__.py:F401
max-line-length = 110
